@@ -26,7 +26,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'internal' => '',
 	'uploadfolder' => 0,
 	'createDirs' => '',
-	'modify_tables' => 'cache_pages,fe_users,pages,sys_template,tt_content',
+	'modify_tables' => 'cache_pages,fe_groups,fe_users,pages,sys_template,tt_content',
 	'clearCacheOnLoad' => 0,
 	'lockType' => '',
 	'CGLcompliance' => '',
